Testing FCC1930 issue

--- a/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
+++ b/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7035a655-b681-4ecb-9fc8-755f94d9cbed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gc\n",
+    "gc.collect()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7f9b8fbb-4429-4731-b16c-dc25b9b95ca5",
    "metadata": {
