Testing FCC1930 issue

--- a/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
+++ b/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
@@ -5431,7 +5431,16 @@
    "id": "3622f2ea-6eb5-41b9-8da8-f57e57f8c990",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "best_model = grid_search.best_estimator_\n",
+    "\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "filename = f\"best_pipeline_model_{timestamp}.pkl\"\n",
+    "\n",
+    "joblib.dump(best_model, filename)\n",
+    "print(f\"Best model saved as {filename}\")\n",
+    "print(\"Best parameters found:\", grid_search.best_params_)"
+   ]
   },
   {
    "cell_type": "code",
