--- a/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
+++ b/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
@@ -5223,6 +5223,7 @@
     "from datetime import datetime\n",
     "\n",
     "param_grid = {\n",
+    "    \"estimator__learning_rate\": [0.05, 0.10, 0.15]\n",
     "    'regressor__n_estimators': [75, 100, 150, 200, 250, 300],\n",
     "    'regressor__max_depth': [10, 15, 20, 25, 30, None],\n",
     "    'regressor__min_samples_split': [2, 5, 7, 10],\n",
@@ -5237,8 +5238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_search = GridSearchCV(estimator=pipeline, param_grid=param_grid, cv=5, \n",
-    "                           scoring='neg_mean_squared_error', n_jobs=-1)"
+    "grid_search = GridSearchCV(estimator=pipeline, param_grid=param_grid, cv=3, \n",
+    "                           scoring='neg_mean_squared_error', verbose=0, n_jobs=-1)"
    ]
   },
   {
