--- a/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
+++ b/TTH_AIRLINE_PRJ/Classifier_Training_And_Registration_FCC1930_test.ipynb
@@ -5246,7 +5246,7 @@
     "    'max_depth': [ 3, 4, 5, 6, 8],\n",
     "    'min_child_weight': [ 1, 3, 5, 7],\n",
     "    'gamma':[ 0.0, 0.1, 0.2],\n",
-    "    'colsample_bytree':[ 0.3, 0.4],\n",
+    "    'colsample_bytree':[ 0.3, 0.4]\n",
     "}"
    ]
   },
